Package_Tools/include-C/Ubuntu_26.04/gstreamer-1.0/gst/video/in_arbeit/h/video_anc.h

typedef struct _GstVideoAncillary GstVideoAncillary;
typedef enum {
  GST_VIDEO_ANCILLARY_DID_UNDEFINED = 0x00,
  GST_VIDEO_ANCILLARY_DID_DELETION  = 0x80,
  GST_VIDEO_ANCILLARY_DID_HANC_3G_AUDIO_DATA_FIRST = 0xa0,
  GST_VIDEO_ANCILLARY_DID_HANC_3G_AUDIO_DATA_LAST = 0xa7,
  GST_VIDEO_ANCILLARY_DID_HANC_HDTV_AUDIO_DATA_FIRST = 0xe0,
  GST_VIDEO_ANCILLARY_DID_HANC_HDTV_AUDIO_DATA_LAST = 0xe7,
  GST_VIDEO_ANCILLARY_DID_HANC_SDTV_AUDIO_DATA_1_FIRST = 0xec,
  GST_VIDEO_ANCILLARY_DID_HANC_SDTV_AUDIO_DATA_1_LAST = 0xef,
  GST_VIDEO_ANCILLARY_DID_CAMERA_POSITION = 0xf0,
  GST_VIDEO_ANCILLARY_DID_HANC_ERROR_DETECTION = 0xf4,
  GST_VIDEO_ANCILLARY_DID_HANC_SDTV_AUDIO_DATA_2_FIRST = 0xf8,
  GST_VIDEO_ANCILLARY_DID_HANC_SDTV_AUDIO_DATA_2_LAST = 0xff,
} GstVideoAncillaryDID;
#define GST_VIDEO_ANCILLARY_DID16(anc) ((guint16)((anc)->DID) << 8 | (guint16)((anc)->SDID_block_number))
typedef enum {
  GST_VIDEO_ANCILLARY_DID16_S334_EIA_708	= 0x6101,
  GST_VIDEO_ANCILLARY_DID16_S334_EIA_608	= 0x6102,
  GST_VIDEO_ANCILLARY_DID16_S2016_3_AFD_BAR	= 0x4105,
} GstVideoAncillaryDID16;
typedef enum {
  GST_ANCILLARY_META_FIELD_PROGRESSIVE          = 0x00,
  GST_ANCILLARY_META_FIELD_INTERLACED_FIRST     = 0x10,
  GST_ANCILLARY_META_FIELD_INTERLACED_SECOND    = 0x11,
} GstAncillaryMetaField;
typedef struct {
  GstMeta meta;
  GstAncillaryMetaField field; 	
  gboolean c_not_y_channel;	
  guint16 line;			
  guint16 offset;		
  guint16 DID;			
  guint16 SDID_block_number;	
  guint16 data_count;		
  guint16 *data;		
  guint16 checksum;		
} GstAncillaryMeta;
extern GType gst_ancillary_meta_api_get_type(void);
#define GST_ANCILLARY_META_API_TYPE (gst_ancillary_meta_api_get_type())
extern const GstMetaInfo *gst_ancillary_meta_get_info(void);
#define GST_ANCILLARY_META_INFO (gst_ancillary_meta_get_info())
extern GstAncillaryMeta *
gst_buffer_add_ancillary_meta(GstBuffer *buffer);
#define gst_buffer_iterate_ancillary_meta(b, s) \
  ((GstAncillaryMeta*)gst_buffer_iterate_meta_filtered((b), (s), GST_ANCILLARY_META_API_TYPE))
typedef enum {
  GST_VIDEO_AFD_UNAVAILABLE = 0,
  GST_VIDEO_AFD_16_9_TOP_ALIGNED = 2,
  GST_VIDEO_AFD_14_9_TOP_ALIGNED = 3,
  GST_VIDEO_AFD_GREATER_THAN_16_9 = 4,
  GST_VIDEO_AFD_4_3_FULL_16_9_FULL = 8,
  GST_VIDEO_AFD_4_3_FULL_4_3_PILLAR = 9,
  GST_VIDEO_AFD_16_9_LETTER_16_9_FULL = 10,
  GST_VIDEO_AFD_14_9_LETTER_14_9_PILLAR = 11,
  GST_VIDEO_AFD_4_3_FULL_14_9_CENTER = 13,
  GST_VIDEO_AFD_16_9_LETTER_14_9_CENTER = 14,
  GST_VIDEO_AFD_16_9_LETTER_4_3_CENTER = 15
} GstVideoAFDValue;
typedef enum {
  GST_VIDEO_AFD_SPEC_DVB_ETSI,
  GST_VIDEO_AFD_SPEC_ATSC_A53,
  GST_VIDEO_AFD_SPEC_SMPTE_ST2016_1
} GstVideoAFDSpec;
typedef struct {
  GstMeta meta;
  guint8 field;
  GstVideoAFDSpec spec;
  GstVideoAFDValue afd;
} GstVideoAFDMeta;
extern GType gst_video_afd_meta_api_get_type (void);
#define GST_VIDEO_AFD_META_API_TYPE (gst_video_afd_meta_api_get_type())
extern const GstMetaInfo *gst_video_afd_meta_get_info (void);
#define GST_VIDEO_AFD_META_INFO (gst_video_afd_meta_get_info())
#define gst_buffer_get_video_afd_meta(b) \
        ((GstVideoAFDMeta*)gst_buffer_get_meta((b),GST_VIDEO_AFD_META_API_TYPE))
extern
GstVideoAFDMeta *gst_buffer_add_video_afd_meta (GstBuffer * buffer, guint8 field,
						GstVideoAFDSpec spec,
						GstVideoAFDValue afd);
typedef struct {
  GstMeta meta;
  guint8 field;
  gboolean is_letterbox;
  guint bar_data1;
  guint bar_data2;
} GstVideoBarMeta;
extern GType gst_video_bar_meta_api_get_type (void);
#define GST_VIDEO_BAR_META_API_TYPE (gst_video_bar_meta_api_get_type())
extern const GstMetaInfo *gst_video_bar_meta_get_info (void);
#define GST_VIDEO_BAR_META_INFO (gst_video_bar_meta_get_info())
#define gst_buffer_get_video_bar_meta(b) \
        ((GstVideoBarMeta*)gst_buffer_get_meta((b),GST_VIDEO_BAR_META_API_TYPE))
extern
GstVideoBarMeta *gst_buffer_add_video_bar_meta (GstBuffer * buffer, guint8 field,
    gboolean is_letterbox, guint bar_data1, guint bar_data2);
typedef enum {
  GST_VIDEO_CAPTION_TYPE_UNKNOWN                = 0,
  GST_VIDEO_CAPTION_TYPE_CEA608_RAW		= 1,
  GST_VIDEO_CAPTION_TYPE_CEA608_S334_1A		= 2,
  GST_VIDEO_CAPTION_TYPE_CEA708_RAW		= 3,
  GST_VIDEO_CAPTION_TYPE_CEA708_CDP		= 4
} GstVideoCaptionType;
extern
GstVideoCaptionType
gst_video_caption_type_from_caps (const GstCaps *caps);
extern
GstCaps *
gst_video_caption_type_to_caps (GstVideoCaptionType type);
typedef struct {
  GstMeta meta;
  GstVideoCaptionType caption_type;
  guint8 *data;
  gsize size;
} GstVideoCaptionMeta;
extern
GType	gst_video_caption_meta_api_get_type (void);
#define GST_VIDEO_CAPTION_META_API_TYPE (gst_video_caption_meta_api_get_type())
extern
const GstMetaInfo *gst_video_caption_meta_get_info (void);
#define GST_VIDEO_CAPTION_META_INFO (gst_video_caption_meta_get_info())
#define gst_buffer_get_video_caption_meta(b) \
        ((GstVideoCaptionMeta*)gst_buffer_get_meta((b),GST_VIDEO_CAPTION_META_API_TYPE))
extern
GstVideoCaptionMeta *gst_buffer_add_video_caption_meta    (GstBuffer   * buffer,
							   GstVideoCaptionType caption_type,
							   const guint8 *data,
							   gsize size);
typedef struct _GstVideoVBIParser GstVideoVBIParser;
extern
GType gst_video_vbi_parser_get_type (void);
typedef enum {
  GST_VIDEO_VBI_PARSER_RESULT_DONE  = 0,
  GST_VIDEO_VBI_PARSER_RESULT_OK    = 1,
  GST_VIDEO_VBI_PARSER_RESULT_ERROR = 2
} GstVideoVBIParserResult;
extern
GstVideoVBIParserResult gst_video_vbi_parser_get_ancillary(GstVideoVBIParser *parser,
							   GstVideoAncillary *anc);
extern
GstVideoVBIParser *gst_video_vbi_parser_new (GstVideoFormat format, guint32 pixel_width) ;
extern
GstVideoVBIParser *gst_video_vbi_parser_copy (const GstVideoVBIParser *parser) ;
extern
void               gst_video_vbi_parser_free (GstVideoVBIParser *parser);
extern
void		   gst_video_vbi_parser_add_line (GstVideoVBIParser *parser, const guint8 *data);
typedef struct _GstVideoVBIEncoder GstVideoVBIEncoder;
extern
GType gst_video_vbi_encoder_get_type (void);
extern
GstVideoVBIEncoder *gst_video_vbi_encoder_new  (GstVideoFormat format, guint32 pixel_width) ;
extern
GstVideoVBIEncoder *gst_video_vbi_encoder_copy (const GstVideoVBIEncoder *encoder) ;
extern
void               gst_video_vbi_encoder_free  (GstVideoVBIEncoder *encoder);
extern
gboolean gst_video_vbi_encoder_add_ancillary   (GstVideoVBIEncoder *encoder,
                                                gboolean            composite,
                                                guint8              DID,
                                                guint8              SDID_block_number,
                                                const guint8       *data,
                                                guint               data_count);
extern
void gst_video_vbi_encoder_write_line (GstVideoVBIEncoder *encoder, guint8 *data);